--- a/notebooks/pydata02-python-basics-1.html
+++ b/notebooks/pydata02-python-basics-1.html
@@ -13092,7 +13092,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>파이썬 언어 기본 문법</li>
+<li>파이썬 언어 기초 문법</li>
 </ul>
 
 </div>
