pydata_basics are to be added

--- a/notebooks/pydata02-python-basics-1.html
+++ b/notebooks/pydata02-python-basics-1.html
@@ -15823,7 +15823,7 @@ pi:	 3.14159
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#44032;&#48320;(mutable)-&#44061;&#52404;&#50752;-&#48520;&#48320;(immutable)-&#44061;&#52404;">&#44032;&#48320;(mutable) &#44061;&#52404;&#50752; &#48520;&#48320;(immutable) &#44061;&#52404;<a class="anchor-link" href="#&#44032;&#48320;(mutable)-&#44061;&#52404;&#50752;-&#48520;&#48320;(immutable)-&#44061;&#52404;">&#182;</a></h3>
+<h3 id="&#48320;&#44221;-&#44032;&#45733;&#54620;(mutable)-&#44061;&#52404;&#50752;-&#48320;&#44221;-&#48520;&#44032;&#45733;&#54620;(immutable)-&#44061;&#52404;">&#48320;&#44221; &#44032;&#45733;&#54620;(mutable) &#44061;&#52404;&#50752; &#48320;&#44221; &#48520;&#44032;&#45733;&#54620;(immutable) &#44061;&#52404;<a class="anchor-link" href="#&#48320;&#44221;-&#44032;&#45733;&#54620;(mutable)-&#44061;&#52404;&#50752;-&#48320;&#44221;-&#48520;&#44032;&#45733;&#54620;(immutable)-&#44061;&#52404;">&#182;</a></h3>
 </div>
 </div>
 </div>
@@ -15842,7 +15842,7 @@ pi:	 3.14159
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">a_list</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;foo&#39;</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="p">[</span><span class="mi">4</span><span class="p">,</span> <span class="mi">5</span><span class="p">]]</span>
-<span class="n">a_list</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span><span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">)</span>
+<span class="n">a_list</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span> <span class="o">=</span> <span class="p">(</span><span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">)</span><span class="n">ㄴ</span>
 
 <span class="n">a_list</span>
 </pre></div>
