--- a/notebooks/python03.html
+++ b/notebooks/python03.html
@@ -16050,7 +16050,7 @@ n
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
 
-<span class="c1"># 컴퓨터가 1에서 100사의 값을 무작위로 선택</span>
+<span class="c1"># 컴퓨터가 1에서 100사이의 값을 무작위로 선택</span>
 <span class="n">secret</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">100</span><span class="p">)</span>
 
 <span class="c1"># secret을 맞출 때까지 반복해서 guess함.</span>
